tests/baselines/reference/structPrivateStaticNotAccessibleInModule2.errors.txt
tests/cases/conformance/structs/members/accessibilityAndAccessor/structPrivateStaticNotAccessibleInModule2.ts(14,20): error TS20018: Property 'bar' is private and only accessible within struct 'C'.


==== tests/cases/conformance/structs/members/accessibilityAndAccessor/structPrivateStaticNotAccessibleInModule2.ts (1 errors) ====
    // doc 2.2
    // private property members can be accessed only within the struct body that contains their declaration
    
    struct C {
        private foo: string;
        private static bar: string;
    }
    
    struct D extends C {
        baz: number;   
    }
    
    module D {
        export var y = D.bar; // error
                       ~~~~~
!!! error TS20018: Property 'bar' is private and only accessible within struct 'C'.
    }